--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.javax.faces.jar=D:\\Documentos\\Tesis\\3er semestre\\Estancias\\Z
 file.reference.jaxb-api-2.2.jar=D:\\Documentos\\Tesis\\3er semestre\\4to semestre\\jaxb-api-2.2.jar
 file.reference.jaxb-api-2.2.jar.zip=D:\\Documentos\\Tesis\\3er semestre\\4to semestre\\jaxb-api-2.2.jar.zip
 file.reference.jdom-1.1.3.jar=C:\\Users\\Araceli\\Downloads\\jdom-1.1.3.jar
+file.reference.jfreechart-1.5.4.jar=C:\\Users\\Araceli\\Desktop\\jfreechart-1.5.4.jar
 file.reference.opencsv-2.3-sources.jar=C:\\Users\\Araceli\\Downloads\\opencsv-2.3-sources.jar
 file.reference.opencsv-2.3.jar=C:\\Users\\Araceli\\Downloads\\opencsv-2.3.jar
 file.reference.postgresql-9.4.1209.jar=D:\\Documentos\\Tesis\\3er semestre\\Estancias\\Zacatecas\\Respaldo 21042020\\EstudioAutopsiaFunciona0\\build\\web\\WEB-INF\\lib\\postgresql-9.4.1209.jar
@@ -80,7 +81,8 @@ javac.classpath=\
     ${file.reference.commons-math3-3.3.jar}:\
     ${file.reference.opencsv-2.3-sources.jar}:\
     ${file.reference.opencsv-2.3.jar}:\
-    ${file.reference.commons-math3-3.3-src.zip}
+    ${file.reference.commons-math3-3.3-src.zip}:\
+    ${file.reference.jfreechart-1.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
